[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_log = "1.0"
log = "0.4"
